ARCPOC-1774 - Align standard applicant exports with search
- Support combined CSV filters and matching active records.
- Apply consistent ordering across search, CSV and print.
- Configure the PDF result limit with a default of 1000.
- Update OpenAPI documentation and regression tests.